--- a/projects/designdiary.html
+++ b/projects/designdiary.html
@@ -144,7 +144,7 @@
 		</div>
 			
 		<div class="row-project">
-			<div class="col-one">
+			<div class="col-one" data-aos="zoom-in" data-aos-once="true">
 				<h5>Reflection</h5>
 				<p>				
 				I enjoy doing design diary a lot. I found out it easy to criticize on one design, but it is difficult to reason it through a user-center lease and describe the problem in an analytical way. I would made update versions of each design diary and I will keep noticing and observing good and bad designs in life, then in the future I would update more posts in this project.					
@@ -154,7 +154,7 @@
 			</div>
 		</div>
 
-		<a href="artism.html">
+		<a href="krtco.html">
 			<div class="seemore">
 				<div class="col-three">
 					<h6 class="hcenter">NEXT PROJECT ></h6>
