--- a/projects/krtco.html
+++ b/projects/krtco.html
@@ -37,8 +37,8 @@
 
 	<div class="parallax-small parallax-krtco">
 		<article class="intro">
-			<h1 class="white">KRTCO Website</h1>
-			<p class="white">UI Design & Develop</p>
+			<h1>KRTCO Website</h1>
+			<p>UI Design & Develop</p>
 		</article>
 	</div>
 
@@ -116,7 +116,7 @@
 				<div class="col-gif"><img src="web_krtco/01.gif" alt="" class="img-col-two"></div>
 				<div class="col-three">
 					<h6>1 - Home Page</h6>				
-					This page shows the main visual posters of this competition, 4 latest news and the official trailer of the competition. It gives user the first overview of this website.
+					<p>This page shows the main visual posters of this competition, 4 latest news and the official trailer of the competition. It gives user the first overview of this website.</p>
 				</div>
 			</div>
 
@@ -126,7 +126,7 @@
 				</div>				
 				<div class="col-three">
 					<h6>2 - Latest News</h6>
-					This page listed out all the news that posted by the project team of this competition, showing the posted date and the number of people viewing each news.
+					<p>This page listed out all the news that posted by the project team of this competition, showing the posted date and the number of people viewing each news.</p>
 				</div>			
 			</div>
 
@@ -136,7 +136,7 @@
 				</div>
 				<div class="col-three">
 					<h6>3 - Introduction</h6>
-					This page introduces the origin, the link to past years official websites, and the full introduction of the competition in the year 2016.
+					<p>This page introduces the origin, the link to past years official websites, and the full introduction of the competition in the year 2016.</p>
 				</div>
 			</div>
 
@@ -146,7 +146,7 @@
 				</div>				
 				<div class="col-three">
 					<h6>4 - Competition Information</h6>
-					This is the main information about the competition. Includes the dates, registration information, video upload instructions, scoring rubrics, judges introduction, and prize information.
+					<p>This is the main information about the competition. Includes the dates, registration information, video upload instructions, scoring rubrics, judges introduction, and prize information.</p>
 				</div>			
 			</div>
 
@@ -156,17 +156,13 @@
 				</div>	
 				<div class="col-three">
 					<h6>5 - Voting / Viewing Video</h6>
-					During the voting stage, this page provide as the voting system for people to vote for their favorite short film. After the voting, it listed out all the films that participated in this competition.
+					<p>During the voting stage, this page provide as the voting system for people to vote for their favorite short film. After the voting, it listed out all the films that participated in this competition.</p>
 				</div>
 			</div>
 		<div class="row-project row-project-color-2">
-			<div class="col-one">
+			<div class="col-one" data-aos="zoom-in" data-aos-once="true">
 				<h5>Conclusion</h5>
-				In this project, I cooperated with the project team and visual designer in the company, and applied the System Analysis and Design Method the development of this website. However, it lacks the real opinions and insights from the use of the users. The future work can be applying user center design approach to redesign it.
-			</div>
-		</div>
-		<div class="row-project">
-			<div class="col-one">
+				<p>In this project, I cooperated with the project team and visual designer in the company, and applied the System Analysis and Design Method the development of this website. However, it lacks the real opinions and insights from the use of the users. The future work can be applying user center design approach to redesign it.</p>
 				<a target="_blank" href="http://bm.nsysu.edu.tw/krtc-competition2016/home.php">
 				<div class="btn-visit">Live Demo</div></a>		
 			</div>
