--- a/projects/nsysuhero.html
+++ b/projects/nsysuhero.html
@@ -63,17 +63,17 @@
 			</div>
 		</div>
 
-		<div class="row-project row-project-color" data-aos="slide-up" data-aos-once="true">
+		<div class="row-project row-project-color">
 			<div class="col-one"><h5>Story</h5></div>
 			<div class="col-two">				
-				<img src="game_nsysuhero/monkey.jpg" alt="monkey" class="img-col-two">
+				<img src="game_nsysuhero/monkey.jpg" alt="monkey" class="img-col-two" data-aos="zoom-in" data-aos-once="true">
 			</div>
 			<div class="col-two">
 				<p>
 				NSYSU HERO is based on the geographical background of my university, National Sun Yat-sun University.<br> <br>
 				Soma part of the mountainous campus are the natural habitat of <b>Formosan macaque</b>, a protected species in Taiwan.<br><br>
 				However, sometimes the macaques can be pretty aggressive and attack students. Thus, campus safeguards use airgun to scare off the monkeys preventing them from attacking human, and then bring them back to their home to protect them.<br><br>
-				We created NSYSU HERO as a little game to practice the skills of using Unity and designing user interface of games.
+				We created NSYSU HERO to practice the skills of using Unity and designing user interface of games.
 				</p>
 			</div>
 		</div>
@@ -81,9 +81,9 @@
 		<div class="row-full">
 			<div class="col-one"><h5>Game Scenes</h5></div>
 			<div class="col-gif">
-				<img src="game_nsysuhero/nsysuhero1.png" class="img-col-two" alt="nsysuhero1" data-aos="fade-right" data-aos-once="true">
+				<img src="game_nsysuhero/nsysuhero1.png" class="img-col-two">
 			</div>
-			<div class="col-three">
+			<div class="col-three" data-aos="fade-left" data-aos-once="true">
 				<h6>1 - Home Page</h6>
 				<p>The home page let user to go to two pages.<br><mark>How to play</mark> takes user to the game instruction page, and the <mark>Start</mark> will start a new game.</p>
 			</div>
@@ -92,9 +92,9 @@
 
 		<div class="row-full">
 			<div class="col-gif">
-				<img src="game_nsysuhero/nsysuhero_instruc.png" class="img-col-one" alt="nsysuhero_instruc" data-aos="fade-right" data-aos-once="true">
+				<img src="game_nsysuhero/nsysuhero_instruc.png" class="img-col-one" alt="nsysuhero_instruc">
 			</div>
-			<div class="col-three">
+			<div class="col-three" data-aos="fade-right" data-aos-once="true">
 				<h6>2 - Instruction Page</h6>
 				<p>The instruction page use photos and text to explain the controls and rules about how to play this game.<br>The <mark>back</mark> button take user back to the home page.</p>
 			</div>
@@ -103,9 +103,9 @@
 
 		<div class="row-full">
 			<div class="col-gif">
-				<img src="game_nsysuhero/nsysuhero_game.png" class="img-col-one"alt="" data-aos="fade-right" data-aos-once="true" >
+				<img src="game_nsysuhero/nsysuhero_game.png" class="img-col-one" alt="">
 			</div>
-			<div class="col-three">
+			<div class="col-three" data-aos="fade-left" data-aos-once="true" data-aos-offset="-300">
 				<h6>03 - Game Scene</h6>
 				<p>This is the main page for the game.<br>The character should avoid bumping to the bus and have to jump on to the building.<br>The <mark>Donut</mark> indicates the life of the character.<br>The <mark>Score</mark> indicates the current score of this game.<br>The <mark>End</mark> indicates end this game and show the result.<br></p>
 			</div>
@@ -113,13 +113,12 @@
 		
 		<div class="row-project row-project-color">
 			<h5>Live Demo</h5>
-			<video controls>
-				<source src="game_nsysuhero/demo.m4v" type="video/mp4">
-				Your browser does not support the video tag. Please change another browser
-			</video>
+			<div class="iframe-container">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/j3qyajk6ois" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
 		</div>
 		
-		<div class="row-project">
+		<div class="row-project" data-aos="zoom-in" data-aos-once="true">
 			<h5>Conclusion</h5>
 			<p>I really enjoyed drawing the game scenes and UI elements for this game. I also learned how to communicated with game developer in a gaming project. I not only practiced team work skills, but also practiced my design skills in this project.</p>
 		</div>
