add index h1 animation

--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
 	<header class="header">
 		<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
 		<a href="art.html" class="a_nav"><span class="btn_nav">ART</span></a>
-		<a href="#wrapper" class="a_nav"><span class="btn_nav">WORK</span></a>
+		<a href="#work" class="a_nav"><span class="btn_nav">WORK</span></a>
 	</header>
 	<div class="parallax-100 parallax-index-1">
 	<article class="intro">
 		<img src="img/logo.png" alt="logo" class="logo-mid">
-		<h1>Wei Cheng</h1>
+		<h1 class="tracking-in-contract">Wei Cheng</h1>
 		<p>
 			<b>UI/UX Designer</b><br>A graduate student studying at iSchool<br>at University of Texas at Austin.<br>
 		</p><br>
 		learn more about Wei:<br>
-		<a href="#wrapper">
+		<a href="#work">
 			<i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
 		</a>
 	</article>
 	</div>
-<div class="wrapper" id="wrapper">
-	<div class="section-trait">
+<div class="wrapper">
+	<div class="section-trait" id="work">
 		<h2>WORK</h2>
 		<div class="row-index">
 			<a href="projects/designdiary.html">
@@ -67,9 +67,7 @@
 			    </div>
 		    </a>
 		</div>
-		<div class="row-index">	
-<!-- 
- -->
+		<div class="row-index">
 		    <a href="projects/krtco.html">
 			    <div class="project-small">
 			    	<img class="project-size" src="projects/web_krtco/krtco.png" alt="" data-aos="fade-down" data-aos-once="true">
