--- a/projects/nsysuhero.html
+++ b/projects/nsysuhero.html
@@ -94,7 +94,7 @@
 			<div class="col-gif">
 				<img src="game_nsysuhero/nsysuhero_instruc.png" class="img-col-one" alt="nsysuhero_instruc">
 			</div>
-			<div class="col-three" data-aos="fade-right" data-aos-once="true">
+			<div class="col-three" data-aos="fade-left" data-aos-once="true">
 				<h6>2 - Instruction Page</h6>
 				<p>The instruction page use photos and text to explain the controls and rules about how to play this game.<br>The <mark>back</mark> button take user back to the home page.</p>
 			</div>
@@ -105,7 +105,7 @@
 			<div class="col-gif">
 				<img src="game_nsysuhero/nsysuhero_game.png" class="img-col-one" alt="">
 			</div>
-			<div class="col-three" data-aos="fade-left" data-aos-once="true" data-aos-offset="-300">
+			<div class="col-three" data-aos="fade-left" data-aos-once="true">
 				<h6>03 - Game Scene</h6>
 				<p>This is the main page for the game.<br>The character should avoid bumping to the bus and have to jump on to the building.<br>The <mark>Donut</mark> indicates the life of the character.<br>The <mark>Score</mark> indicates the current score of this game.<br>The <mark>End</mark> indicates end this game and show the result.<br></p>
 			</div>
