update artism project

--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@
 	<div class="section-trait" id="work">
 		<h2>WORK</h2>
 		<div class="row-index">
+		    <a href="projects/krtco.html">
+			    <div class="project-small">
+			    	<img class="project-size" src="projects/web_krtco/krtco.png" alt="" data-aos="fade-down" data-aos-once="true">
+			    	<h3>KRTCO Website</h3>
+			    	<h4>Web UI Design & Develop</h4>
+			    </div>
+			</a>
+		    <a href="projects/artism.html">
+			    <div class="project-small">
+			    	<img class="project-size" src="projects/artism/artism.png" alt="" data-aos="fade-down" data-aos-once="true">
+			    	<h3>Artism</h3>
+			    	<h4>UX Design</h4>
+			    </div>
+			</a>			
+		</div>		
+		<div class="row-index">
 			<a href="projects/designdiary.html">
 			    <div class="project-small">
 			    	<img class="project-size" src="projects/design_diary/designdiary.png" alt="" data-aos="fade-down" data-aos-once="true">
@@ -66,15 +82,6 @@
 			    	<h4>Game UI Design</h4>
 			    </div>
 		    </a>
-		</div>
-		<div class="row-index">
-		    <a href="projects/krtco.html">
-			    <div class="project-small">
-			    	<img class="project-size" src="projects/web_krtco/krtco.png" alt="" data-aos="fade-down" data-aos-once="true">
-			    	<h3>KRTCO Website</h3>
-			    	<h4>Web UI Design & Develop</h4>
-			    </div>
-			</a>
 		</div>
 	</div>
 	<div class="section-trait row-project-color">
@@ -108,7 +115,7 @@
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
-		<span class="copyright">&copy; made by WEI CHENG | 2018.</span><br>
+		<span class="copyright">&copy; made by WEI CHENG | 2019.</span><br>
 	</footer>
 </div>
 	<script src="js/loader.js"></script>
