--- a/projects/artism.html
+++ b/projects/artism.html
@@ -56,11 +56,11 @@
 		<div class="row-project">
 			<div class="col-four">
 				<h5>Role</h5>
-				<p>UX researcher, UX designer, UI designer</p>
+				<p>UX researcher<br>UX designer<br>UI designer</p>
 			</div>
 			<div class="col-four">
 				<h5>Team</h5>
-				<p>Wei Cheng, Yanbin Hao</p>
+				<p>Wei Cheng<br>Yanbin Hao</p>
 			</div>
 			<div class="col-four">
 				<h5>Tools</h5>
@@ -83,70 +83,125 @@
 			</div>
 		</div>
 		<div class="row-project">
-			<img src="artism/process-1.svg" alt="process-1" class="img-col-one">
 			<div class="col-one">
 				<h5>Observation</h5>
 				<p>
-					We went to Austin Central Public Library to observe what kind of technology or game do most children like to play on the computers. I opened several games in different categories on the computers and wait for children to interactive with them. Including storybooks, math, and art game. It turns out that preschool children (3-5 years) likes to interact with the art related, language-free games. The child I observed was a 4-years old girl, the game she was playing is called PAINT.
+					The goal of this stage is to discover potential usage behavior and need of children in specific age range.
+					We went to Austin Central Public Library to observe what kind of technology or game do most children like to play on the computers. It turns out that preschool children (3-5) likes to interact with the art related, language-free games. The child I observed was a 4-years old girl, the game she was playing is PAINT. From the observation, we have these takeaways:
+					<ol>
+						<li>
+							<b>Drawing can be a communication way that can let children express themselves.</b><br>English is not the first language of the little girl we observed, but we could still feel and know what her current emotions through her painting.
+						</li>
+						<li>
+							<b>Children prefer interacting with touchscreen.</b><br>Even though there are keyboards and mouse that specially designed for children, they still prefer touching and tapping on the computer screen.
+						</li>
+						<li>
+							<b>Preschool kids need feedback and instructions when interact with technology.</b><br> The girl couldn’t know some of the meaning of the tools, it’s better to implement instructions by the app itself or guidance from adults.
+						</li>
+					</ol>					
 				</p>
 			<img src="artism/observe-0.jpg" alt="observe-0" class="img-col-three-close">
 			<img src="artism/observe-1.jpg" alt="observe-1" class="img-col-three-close">					
 			<img src="artism/observe-2.jpg" alt="observe-2" class="img-col-three-close">
 			</div>
-			<div class="col-one">
+		</div>
+		<div class="row-project">
+			<div class="col-one ">
 				<h5>Interview</h5>
 				<p>
-					We interviewed the mother of the little girl about the 
+					The goal of this interview phase is to found out their child’s use of technology and their beliefs about how technology influences children. We interviewed the little girl’s mother for 20 minutes with 5 questions and open for her own sharing. The mother told us that technology is a tool that can help kids learning in this new generation, just like books and toys.
+					Some insights from the interview are:
+					<ol>
+						<li>
+							<b>Parents prefer technology has educational meaning to preschool children.</b><br>Technologies provide kids new approaches to complete task. Kids could pre-prepare for school work with skills learning from touchscreen.
+						</li>
+						<li>
+							<b>Painting apps help kids to learn different hand movements and hand-eye coordination.</b><br>The physical drawing includes more senses, such as the smell of the crayon, the feel of paper, or the sounds of scratching on paper. As for painting on the computer, it included other cognitive understanding like knowing the difference between each function, and the meaning of symbols.
+						</li>
+					</ol>
+				</p>		
+				<img src="artism/interview-0.jpg" alt="interview-0" class="img-col-three-close">
+				<img src="artism/interview-1.jpg" alt="interview-1" class="img-col-three-close">
+				<img src="artism/interview-2.jpg" alt="interview-2" class="img-col-three-close">
+			</div>
+		</div>
+		<div class="row-project row-project-color">	
+			<p>These are the important needs of the technology we want to focus on:</p>
+			<div class="col-three"><img src="artism/observe-1.svg" alt="" class="img-col-three"></div>
+			<div class="col-three"><img src="artism/observe-2.svg" alt="" class="img-col-three"></div>
+			<div class="col-three"><img src="artism/observe-3.svg" alt="" class="img-col-three"></div>	
+		</div>		
+		<div class="row-project">
+			<div class="col-one">
+				<h5>Research</h5>
+				<h6>Literature Review</h6>
+				<img src="artism/stats.svg" alt="stats" class="img-col-one">
+				<p>We conducted literature review to find out potential related topics that we can do.
+				We decide to set our target need group as the preschool kids (3-5 years old) with autism spectrum disorder.
 				</p>
-			</div>			
-			<div class="col-two">
-				<img src="artism/interview-1.jpg" alt="interview-1" class="img-col-two"></div>
-			<div class="col-two">
-				<img src="artism/interview-2.jpg" alt="interview-2" class="img-col-two"></div>
-		</div>	
+<!-- 				<h6>Goals</h6>
+				<p>These are the main goals that we want to focus for our technology design for preschool children:<br>
+				<ol>
+					<li>Technology as an educational tool</li>
+					<li>An Drawing related application</li>
+					<li>Help kids to learn communication</li>
+				</ol>
+				</p> -->				
+			</div>
+		</div>
 
 		<div class="row-project">
 			<div class="col-one">
-				<img src="artism/process-2.svg" alt="process-2" class="img-col-one">
+				<h5>Persona</h5>
+				<img src="artism/persona-1.png" alt="persona-1" class="img-col-one">		
+				<img src="artism/persona-2.png" alt="persona-2" class="img-col-one">
+			</div>	
+		</div>
+
+		<div class="row-project row-project-color">
+			<div class="col-one">
 				<h5>Ideate</h5>
-				paper sketch<br>
-				bullet points
-				<h5>User Scenario</h5>
-				user flow<br>
-				environment
+				<h6>paper sketch</h6>
+				<img src="artism/sketch-1.jpg" alt="sketch" class="img-col-one-80">
 			</div>
 		</div>
-
-		<div class="row-project">
+		<div class="row-full">		
 			<div class="col-one">
-				<img src="artism/process-3.svg" alt="process-3" class="img-col-one">
-				<h5>Wireframe</h5>
-				paper sketch<br>
-				bullet points
-				<h5>Mockups</h5>
-				user flow<br>
-				environment
-				<h5>Evaluation</h5>
-				in progress<br>			
+				<h5>User Flow</h5>
+				<img src="artism/flow.png" alt="flow" class="img-col-one">
 			</div>
 		</div>
-
 		<div class="row-project">
+				
+		</div>
+		
+		<div class="row-full row-project-color">
+			<h5>Wireframe</h5>
+			<img src="artism/lofi.svg" alt="lofi" class="img-col-one">
+		</div>
+
+		<div class="row-full">
+			<h5>Hi-fi Mockups</h5>
+			<img src="artism/hifi.png" alt="hifi" class="img-col-one">
+		</div>
+
+<!-- 		<div class="row-project">
 			<div class="col-one">
 				<h5>Reflection</h5>		
+				<img src="artism/comeback.svg" alt="" class="img-col-one">
 			</div>
-		</div>
+		</div> -->
 
-		<a href="krtco.html">
+		<a href="designdiary.html">
 			<div class="seemore">
 				<div class="col-three">
 					<h6 class="hcenter">NEXT PROJECT ></h6>
 				</div>
 				<div class="col-three">
-					<h5 class="hcenter">KRTCO Website</h5>
+					<h5 class="hcenter">Design Diary</h5>
 				</div>
 				<div class="col-three">
-					<img class="img-col-one" src="web_krtco/krtco.png" alt="">
+					<img class="img-col-one" src="design_diary/designdiary.png" alt="">
 				</div>
 			</div>
 		</a>
@@ -157,7 +212,7 @@
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
-		<span class="copyright">&copy; made by WEI CHENG | 2018.</span><br>
+		<span class="copyright">&copy; made by WEI CHENG | 2019.</span><br>
 	</footer>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	<script src="../js/scroll.js"></script>
