--- a/projects/designdiary.html
+++ b/projects/designdiary.html
@@ -147,7 +147,7 @@
 			<div class="col-one" data-aos="zoom-in" data-aos-once="true">
 				<h5>Reflection</h5>
 				<p>				
-				I enjoy doing design diary a lot. I found out it easy to criticize on one design, but it is difficult to reason it through a user-center lease and describe the problem in an analytical way. I would made update versions of each design diary and I will keep noticing and observing good and bad designs in life, then in the future I would update more posts in this project.					
+				I enjoy doing design diary a lot. I found out it easy to criticize on one design, but it is difficult to reason it through a user-center lense and describe the problem in an analytical way. I would made update versions of each design diary and I will keep noticing and observing good and bad designs in life, then in the future I would add more posts.					
 				</p>
 				<a target="_blank" href="https://medium.com/design-diary-by-wei-cheng">
 				<div class="btn-visit">Read Design Diary</div></a>
