--- a/projects/krtco.html
+++ b/projects/krtco.html
@@ -167,16 +167,16 @@
 				<div class="btn-visit">Live Demo</div></a>		
 			</div>
 		</div>
-		<a href="nsysuhero.html">
+		<a href="artism.html">
 			<div class="seemore">
 				<div class="col-three">
 					<h6 class="hcenter">NEXT PROJECT ></h6>
 				</div>
 				<div class="col-three">
-					<h5 class="hcenter">NSYSU HERO</h5>
+					<h5 class="hcenter">Artism</h5>
 				</div>
 				<div class="col-three">
-					<img class="img-col-one" src="game_nsysuhero/nsysuhero_game.png" alt="">
+					<img class="img-col-one" src="artism/artism.png" alt="">
 				</div>
 			</div>
 		</a>
@@ -187,7 +187,7 @@
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
-		<span class="copyright">&copy; made by WEI CHENG | 2018.</span><br>
+		<span class="copyright">&copy; made by WEI CHENG | 2019.</span><br>
 	<!-- </footer> -->
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	<script src="../js/scroll.js"></script>
