--- a/projects/artism.html
+++ b/projects/artism.html
@@ -22,17 +22,17 @@
 </head>
 <body>
 	<div class="drawer">
-		<span class="drawer_btn_nav"><a href="../index.html" class="light">WORK</a></span>
-		<span class="drawer_btn_nav"><a href="../art.html">ART</a></span>
+		<span class="drawer_btn_nav"><a href="index.html" class="light">WORK</a></span>
+		<span class="drawer_btn_nav"><a href="about.html">ABOUT</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
 
-	<header>
-		<a href="../index.html"><img class="logo" src="../img/logo.png" alt="logo"></a>
-		<a href="../art.html" class="a_nav"><span class="btn_nav">ART</span></a>
-		<a href="../index.html" class="a_nav"><span class="btn_nav light">WORK</span></a>
+	<header class="header">
+		<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
+		<a href="about.html" class="a_nav"><span class="btn_nav">ABOUT</span></a>
+		<a href="index.html" class="a_nav"><span class="btn_nav light">WORK</span></a>
 	</header>
 
 	<div class="parallax-small parallax-artism">
