--- a/art.html
+++ b/art.html
@@ -23,8 +23,8 @@
 <body>
 	<div class="loader"><img class="img-loader" src="img/logo.gif"></div>
 	<div class="drawer">
-		<span class="drawer_btn_nav"><a href="index.html">WORK</a></span>
-		<span class="drawer_btn_nav"><a href="art.html" class="light">ART</a></span>
+		<span class="drawer_btn_nav"><a href="index.html" class="light">WORK</a></span>
+		<span class="drawer_btn_nav"><a href="about.html">ABOUT</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
@@ -32,8 +32,8 @@
 
 	<header class="header">
 		<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
-		<a href="art.html" class="a_nav"><span class="btn_nav light">ART</span></a>
-		<a href="index.html" class="a_nav"><span class="btn_nav">WORK</span></a>
+		<a href="about.html" class="a_nav"><span class="btn_nav">ABOUT</span></a>
+		<a href="index.html" class="a_nav"><span class="btn_nav light">WORK</span></a>
 	</header>
 	<div class="parallax-art parallax-art-1">
 		<article class="intro">
