--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="style-mobile.css">
-	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
@@ -73,11 +73,14 @@
 	</article>
 </div>
 	<footer>
-		<span>Contact Wei:</span><br>
+		<img class="logo-small" src="img/logo.png" alt="logo"><br>
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
+		<a target="_blank" href="https://www.instagram.com/weichenglily" class="fa foot fa-instagram" style="font-size:25px"></a>	
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
-		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
-		<span class="copyright">&copy; made by WEI CHENG | 2019.</span><br>
+		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a>
+		<a target="_blank" href="https://medium.com/@weichenglily" class="fa foot fa-medium" style="font-size:25px"></a><br>
+		<span class="footer">wei.cheng@utexas.edu</span><br>
+		<span class="footer">&copy; made by WEI CHENG | 2019.</span>
 	</footer>
 </div>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
