--- a/projects/designdiary.html
+++ b/projects/designdiary.html
@@ -29,9 +29,9 @@
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
 
-	<header>
+	<header class="header">
 		<a href="../index.html"><img class="logo" src="../img/logo.png" alt="logo"></a>
-		<a href="../art.html" class="a_nav"><span class="btn_nav">ART</span></a>
+		<a href="../about.html" class="a_nav"><span class="btn_nav">ABOUT</span></a>
 		<a href="../index.html" class="a_nav"><span class="btn_nav light">WORK</span></a>
 	</header>
 
@@ -170,11 +170,14 @@
 	</div>
 
 	<footer>
-		<span>Contact Wei:</span><br>
+		<img class="logo-small" src="../img/logo.png" alt="logo"><br>
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
+		<a target="_blank" href="https://www.instagram.com/weichenglily" class="fa foot fa-instagram" style="font-size:25px"></a>	
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
-		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
-		<span class="copyright">&copy; made by WEI CHENG | 2018.</span><br>
+		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a>
+		<a target="_blank" href="https://medium.com/@weichenglily" class="fa foot fa-medium" style="font-size:25px"></a><br>
+		<span class="footer">wei.cheng@utexas.edu</span><br>
+		<span class="footer">&copy; made by WEI CHENG | 2019.</span>
 	</footer>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	<script src="../js/scroll.js"></script>
