--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<img src="img/logo.png" alt="logo" class="logo-mid">
 		<h1 class="tracking-in-contract">Wei Cheng</h1>
 		<p>
-			<b>is a UI/UX Designer loves to...</b><br>
+			<b>is a UI/UX Designer who loves to...</b><br>
 			<h1>
 			  <a href="" class="typewrite" data-period="2000" data-type='[ "Design.", "Create.", "Listen to users."]'>
 			    <span class="wrap"></span>
