--- a/projects/krtco.html
+++ b/projects/krtco.html
@@ -78,7 +78,7 @@
 			</div>
 
 			<div class="col-one">
-				<p>In 2016, the product manager cooperated with students from National Sun Yat-sen University — 2 students from business management department to plan for the promoting campaigns, and 4 students from information management department to build the website and voting system. For the website in 2016, the product manager wanted to improve several features compare to the previous year. I acted as the frontend designer and developer in this project.
+				<p>In 2016, the product manager cooperated with students from National Sun Yat-sen University — 2 students from business management department to plan for the promoting campaigns, and 4 students from information management department to build the website and voting system. I acted as the frontend designer and developer in this project.
 				</p>
 			</div>
 		</div>		
@@ -91,21 +91,21 @@
 			</div>
 			<div class="col-one">
 				<div class="col-two">
-					<b>1 -- System Planning and Analysis Phase</b><br>
+					<b>1 - System Planning and Analysis Phase</b><br>
 					Kaoshiung Rapid Transit Cooperation hired visual designer to determined the visual elements, and the project manager have listed out the requirements in advance, then they held meeting with development teams to discussed the business requirements.<br><br>
 				</div>
 				<div class="col-two">
-					<b>2 -- System Design Phase</b><br>
+					<b>2 - System Design Phase</b><br>
 					In this step, I utalized the materials the company gave me and made wireframe of the web layout, and I cooporated with databse managers to discuss about the structure of frontend and backend.<br><br>
 				</div>
 			</div>
 			<div class="col-one">
 				<div class="col-two">
-					<b>3 -- System Implementation and Operation</b><br>
+					<b>3 - System Implementation and Operation</b><br>
 					I developed the frontend code and collaborated with the backend developers to complete the system. Later on we executed testing and then deploy the website.<br><br>
 				</div>
 				<div class="col-two">
-					<b>4 -- System Maintenance</b><br>
+					<b>4 - System Maintenance</b><br>
 					I collected feedbacks from the users and evaluate, then made adjustments to some of the UI.
 				</div>
 			</div>
