add google analytics

--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
 
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134084956-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
+	  gtag('config', 'UA-134084956-1');
+	</script>
 	<!-- AOS -->
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-
 	<title>PORTFOLIO | WEI CHENG</title>
 </head>
 <body>
