--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-	<title>PORTFOLIO | WEI CHENG</title>
+	<title>WEI CHENG</title>
 </head>
 <body>
 	<div class="loader"><img src="img/logo.gif"></div>
@@ -48,7 +48,7 @@
 		<p>
 			<b>is a UI/UX Designer who loves to...</b><br>
 			<h1>
-			  <a href="" class="typewrite" data-period="2000" data-type='[ "Design.", "Create.", "Listen to users."]'>
+			  <a href="" class="typewrite" data-period="2000" data-type='[ "Understand.", "Create.", "Iterate."]'>
 			    <span class="wrap"></span>
 			  </a>
 			</h1>			
@@ -61,7 +61,7 @@
 <div class="wrapper">
 	<div class="section-trait" id="work">
 		<h2>WORK</h2>
-		<h4>See what problems have I solved?</h4>
+		<h4>What problems have I solved?</h4>
 		<div class="row-index">
 		    <a href="projects/krtco.html">
 			    <div class="project-small">
