--- a/projects/artism.html
+++ b/projects/artism.html
@@ -49,7 +49,7 @@
 			</div>
 			<div class="col-two">
 			<h5>Overview</h5>
-				<p>Artism is an educational technology provided for Autism children to learn about the social interaction meaning and emotions through social stories and art therapy. I worked as a team of two people, including design process included observation, interview, research, ideate, prototype, and design.
+				<p>Artism is an educational technology provided for Autism children to learn about the social interaction meaning and emotions through social stories and art therapy.
 				</p>
 			</div>
 		</div>
@@ -86,19 +86,21 @@
 			<div class="col-one">
 				<h5>Observation</h5>
 				<p>
-					The goal of this stage is to discover potential usage behavior and need of children in specific age range.
-					We went to Austin Central Public Library to observe what kind of technology or game do most children like to play on the computers. It turns out that preschool children (3-5) likes to interact with the art related, language-free games. The child I observed was a 4-years old girl, the game she was playing is PAINT. From the observation, we have these takeaways:
+					We went to Austin Central Public Library to observe what kind of technology or game do most children like to play on the computers. It turned out that preschool children (3-5) likes to interact with the art related, language-free games. The child I observed was a 4-years old girl, the game she was playing is called PAINT.Through the observation, we have these takeaways:
+					<div class="col-three"><img src="artism/observe-1.svg" alt="" class="img-col-three"></div>
+					<div class="col-three"><img src="artism/observe-2.svg" alt="" class="img-col-three"></div>
+					<div class="col-three"><img src="artism/observe-3.svg" alt="" class="img-col-three"></div>
 					<ol>
 						<li>
-							<b>Drawing can be a communication way that can let children express themselves.</b><br>English is not the first language of the little girl we observed, but we could still feel and know what her current emotions through her painting.
+							<b>Drawing can be a communication way. </b>English is not the first language of the little girl we observed, but we could still feel and know what her current emotions through her painting activity.
 						</li>
 						<li>
-							<b>Children prefer interacting with touchscreen.</b><br>Even though there are keyboards and mouse that specially designed for children, they still prefer touching and tapping on the computer screen.
+							<b>Interacting with touchscreen.</b> Even though there are keyboards and mouse that specially designed for them, they still use fingers.
 						</li>
 						<li>
-							<b>Preschool kids need feedback and instructions when interact with technology.</b><br> The girl couldn’t know some of the meaning of the tools, it’s better to implement instructions by the app itself or guidance from adults.
+							<b>Need feedbacks and instructions when interacting with technology.</b>The girl couldn’t know some of the meaning of the tools. It’s better to implement appropriate instructions in technologies.
 						</li>
-					</ol>					
+					</ol>
 				</p>
 			<img src="artism/observe-0.jpg" alt="observe-0" class="img-col-three-close">
 			<img src="artism/observe-1.jpg" alt="observe-1" class="img-col-three-close">					
@@ -124,33 +126,35 @@
 				<img src="artism/interview-1.jpg" alt="interview-1" class="img-col-three-close">
 				<img src="artism/interview-2.jpg" alt="interview-2" class="img-col-three-close">
 			</div>
-		</div>
-		<div class="row-project row-project-color">	
-			<p>These are the important needs of the technology we want to focus on:</p>
-			<div class="col-three"><img src="artism/observe-1.svg" alt="" class="img-col-three"></div>
-			<div class="col-three"><img src="artism/observe-2.svg" alt="" class="img-col-three"></div>
-			<div class="col-three"><img src="artism/observe-3.svg" alt="" class="img-col-three"></div>	
-		</div>		
+		</div>	
 		<div class="row-project">
+			<h5>Research</h5>
 			<div class="col-one">
-				<h5>Research</h5>
-				<h6>Literature Review</h6>
-				<img src="artism/stats.svg" alt="stats" class="img-col-one">
-				<p>We conducted literature review to find out potential related topics that we can do.
-				We decide to set our target need group as the preschool kids (3-5 years old) with autism spectrum disorder.
-				</p>
-<!-- 				<h6>Goals</h6>
-				<p>These are the main goals that we want to focus for our technology design for preschool children:<br>
-				<ol>
-					<li>Technology as an educational tool</li>
-					<li>An Drawing related application</li>
-					<li>Help kids to learn communication</li>
-				</ol>
-				</p> -->				
+				<h6>1.The Prevalence of Autism</h6>
+				<img src="artism/research-1.jpg" alt="research-1" class="img-col-one">				
+				<p>We conducted literature review to find out potential related topics that we can do. According to Centers for Disease Control and Prevention (CDC), based on an analysis of 2014-2018 medical and educational records of 8-11 year-old autism’s estimated prevalence among children in US is 1 in 49 kids. Thus, we decide to set our target need group as the preschool kids (3-5 years old) with autism spectrum disorder.</p>				
+			</div>
+		</div>
+		
+
+		<div class="row-project">
+			<div class="col-one">	
+				<h6>2.Using Social Stories to teach communication</h6>
+				<img src="artism/research-2.jpg" alt="research-2" class="img-col-one">				
+				<p>Social stories are short stories that describe social situations in terms of relevant social cues and often define appropriate responses (Gray & Garand, 1993). Studies shows that for some children with ASD, social stories have been successful in improving their responses to social situations within a short period of time.</p>
 			</div>
 		</div>
 
 		<div class="row-project">
+			<div class="col-one">	
+				<h6>3.The use of Art Thearpy</h6>
+				<img src="artism/research-3.jpg" alt="research-3" class="img-col-one">				
+				<p>Individuals with autism often experience anxiety, stress, depression, and frustration as a result of their symptoms and the social impact of their symptoms (Martin, 2009). Round, Baker & Rayner (2017) found that the art making process was associated with improved speech, communication, and social interaction. Therefore, due to the benefits of art therapy about emotional and behavioral development, and the goal of our technology to enhance the emotion expression, we decide to apply this method in our design.
+				</p>			
+			</div>				
+		</div>
+
+		<div class="row-project row-project-color">
 			<div class="col-one">
 				<h5>Persona</h5>
 				<img src="artism/persona-1.png" alt="persona-1" class="img-col-one">		
